[package]
name = "dark-market-no-riscv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
operators = {path = "./../caird/operators"}
bfv = {path = "./../bfv/bfv"}
itertools = "0.10.5"
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"